--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <table>
         <tr>
             <td><a href="https://artsci.tamu.edu/statistics/index.html">Link to TAMU Statistics Website</a></td>
-            <td><img src="604HW1/mypic.jpg" alt="Placeholder Image"></td>
+            <td><img src="604hw1/mypic.jpg" alt="Placeholder Image"></td>
         </tr>
         <tr>
             <td><strong>My Bio: </strong>Hi, I'm Aditya and I'm currently a first-year student in the Statistical Data Science Masters programs at Texas A&M. Before this, I was at Rice University in Houston where I majored in Economics and Cognitive Sciences.</td>
