--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,22 +11,22 @@
             padding: 0;
         }
         table {
-            width: 100vw; /* Full viewport width */
-            height: 100vh; /* Full viewport height */
+            width: 100vw; 
+            height: 100vh; 
             border-collapse: collapse;
-            table-layout: fixed; /* Ensure cells take up space evenly */
+            table-layout: fixed; 
         }
         td {
             border: 1px solid #ddd;
-            padding: 0; /* Remove default padding */
+            padding: 0; 
             text-align: center;
-            vertical-align: middle; /* Center content vertically */
-            overflow: hidden; /* Hide overflow content */
+            vertical-align: middle; 
+            overflow: hidden; 
         }
         img {
             max-width: 100%;
             max-height: 100%;
-            object-fit: cover; /* Ensure image covers the cell area */
+            object-fit: cover; 
         }
     </style>
 </head>
