--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             <td><img src="mypic.jpg" alt="Placeholder Image"></td>
         </tr>
         <tr>
-            <td><strong>My Bio: </strong>Hi, I'm Aditya and I'm currently a first-year student in the Statistical Data Science Masters programs at Texas A&M. Before this, I was at Rice University in Houston where I majored in Economics and Cognitive Sciences.</td>
+            <td><strong> My Bio: </strong>
+                <ul>I am currently enrolled in the Statistical Data Science Masters Program at TAMU.</ul>
+                <ul>I got my Bachelor's Degree in Economics and Cognitive Sciences at Rice University.</ul>
+            </td>
             <td></td>
         </tr>
     </table>
