--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
         </tr>
         <tr>
             <td><strong> My Bio: </strong>
-                <ul>I am currently enrolled in the Statistical Data Science Masters Program at TAMU.</ul>
-                <ul>I got my Bachelor's Degree in Economics and Cognitive Sciences at Rice University.</ul>
+                <ul>
+                    <li>I am currently enrolled in the Statistical Data Science Masters Program at TAMU.</li>
+                    <li>I got my Bachelor's Degree in Economics and Cognitive Sciences at Rice University.</li>
+                </ul>
             </td>
             <td></td>
         </tr>
